# lab-3-supercomputing

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: check.yml
consumer/: Cargo.toml
consumer/src/: main.rs
consumer/visualizer/: package-lock.json  package.json
consumer/visualizer/src/: index.js
producer/: Cargo.toml
producer/src/: main.rs
transformer/: .gitignore  beer.styles  build.sbt
transformer/src/main/scala/: Transformer.scala
